// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderButton renders <HeaderButton /> 1`] = `
<button
  className="calendar-header_button is-prev"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
/>
`

exports[`HeaderButton when prop \`arrow\` is defined renders <HeaderButton /> 1`] = `
<button
  className="cal-header_button is-next is-disabled"
  disabled={true}
  onClick={[Function]}
  title="testTitle"
  type="button"
>
  <i
    className="icon"
  >
    Test
  </i>
</button>
`

exports[`HeaderButton when prop \`blockClassName\` is defined renders <HeaderButton /> 1`] = `
<button
  className="cal-header_button is-next is-disabled"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
/>
`

exports[`HeaderButton when prop \`enabled\` is \`false\` renders <HeaderButton /> 1`] = `
<button
  className="calendar-header_button is-prev is-disabled"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
/>
`

exports[`HeaderButton when prop \`title\` is defined renders <HeaderButton /> 1`] = `
<button
  className="cal-header_button is-next is-disabled"
  disabled={true}
  onClick={[Function]}
  title="testTitle"
  type="button"
/>
`

exports[`HeaderButton when prop \`type\` is "next" renders <HeaderButton /> 1`] = `
<button
  className="calendar-header_button is-next is-disabled"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
/>
`
